# gdscript-to-restructured

./: .gitignore  LICENSE  README.md  generate_reference  generate_reference.bat  godot_api_calls.json  reference.json
Screenshots/: Screenshot1png
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_extensions/: gdscript.py  godot_descriptions.py
docs/source/_static/css/: custom.css  my.css
docs/source/_static/js/: custom.js
docs/source/_templates/: layout.html
docs/source/api/: Character.rst  CharacterHelpers.rst  Welcome.rst  index.rst
docs/source/standards/: coding-standards.rst  example.gd  test_layout.rst
export/: api_doc_example.rst
gd2rst_test_scripts/: Main Screen.tscn  project.godot  welcome.gd
gd2rst_test_scripts/Characters/: book_keeping.gd  player.gd
gdscript-rest-maker/: LICENSE  README.md  __main__.py  pyproject.toml  setup.cfg
gdscript-rest-maker/src/: command_line.py  convert_to_restructured.py  gdscript_objects.py  make_godot_api.py  make_restructured.py
gdscript-rest-maker/src/gdscript2rest/: __main__.py
gdscript-rest-maker/src/gdscript2rest/src/: command_line.py  convert_to_restructured.py  gdscript_objects.py  make_restructured.py  utils.py
gdscript2rest/: __main__.py
gdscript2rest/src/: config.py
godot-design-patterns/godot/ECS/: PowerSystem.gd
godot-design-patterns/godot/ECS/Components/: PowerClass.gd
godot-design-patterns/godot/ECS/Entities/: BatteryEntity.tscn
godot-scripts/: Collector.gd  ReferenceCollectorCLI.gd
make-godot-api-refs/: README.md  __main__.py
