[metadata]
name = gdscript2rest
version = 0.4.0
author = Douglas Webster
author_email = douglas.webster2107@gmail.com
description = Create API documentation in reStructuredText from Godot GDScript files
long_description = file: README.md
long_description_content_type = text/markdown
license = { file="LICENSE"}
keywords = godot, gdscript, documentation, restructured, sphinx
url = https://github.com/DouglasWebster/gdscript-to-restructured
project_urls =
    Bug Tracker = https://github.com/DouglasWebster/gdscript-to-restructured/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir = 
     = src
packages = find:
python_requires = >=3.6
install_requires = ghapi

[options.packages.find]
where = src